feat: configuramos os controllers de aluno e seguido da documentação via swagger. Por fim, vamos commitar para a main, para que o projeto seja finalizado estruturalmente. O proximo passo será criar uma imagem via DOCKER para que seja finalizado o projeto.
